# ProjOpenGl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
glad/include/glad/: glad.h
glad/src/: glad.c
